@@ -12,25 +12,36 @@ public class CollectorsExample {
 
     public static void main(String[] args) {
         List<Employee> employees = Arrays.asList(
-            new Employee("Alice", "HR", 10),
-            new Employee("Bob", "IT", 20),
-            new Employee("Charlie", "HR", 30),
-            new Employee("David", "IT", 25)
+                new Employee("Alice", "HR", 10),
+                new Employee("Bob", "IT", 20),
+                new Employee("Charlie", "HR", 30),
+                new Employee("David", "IT", 25)
         );
 
-        var employeesByDepartment = employees.stream().toList();
-
-
-
-        //.collect(Collectors.groupingBy(Employee::getDepartment, Collectors.collectingAndThen(Collectors.maxBy(Comparator.comparingInt(Employee::getSalary)), opt -> opt.map(Employee::getSalary).orElse(0))));
+        // Исправлено: toList() → collect(Collectors.toList())
+        List<Employee> employeesByDepartment = employees.stream()
+                .collect(Collectors.toList());
 
         System.out.println(employeesByDepartment);
+
+        // Пример группировки по отделам (если нужно)
+        Map<String, List<Employee>> byDepartment = employees.stream()
+                .collect(Collectors.groupingBy(Employee::getDepartment));
+
+        System.out.println("Сотрудники по отделам: " + byDepartment);
+
+        // Пример поиска максимальной зарплаты по отделам
+        Map<String, Integer> maxSalaryByDept = employees.stream()
+                .collect(Collectors.groupingBy(
+                        Employee::getDepartment,
+                        Collectors.collectingAndThen(
+                                Collectors.maxBy(Comparator.comparingInt(Employee::getSalary)),
+                                opt -> opt.map(Employee::getSalary).orElse(0)
+                        )
+                ));
+
+        System.out.println("Максимальная зарплата по отделам: " + maxSalaryByDept);
     }
-
-
-
-
-
 
     static class Employee {
         String name;
@@ -45,8 +56,11 @@ public class CollectorsExample {
 
         public String getName() { return name; }
         public String getDepartment() { return department; }
-        public int getSalary() {return salary;}
-        public String toString() { return name; }
+        public int getSalary() { return salary; }
+
+        @Override
+        public String toString() {
+            return name;
+        }
     }
 }
-
